wordpress-stack-emptydir.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-stack
  labels:
    app: wordpress-stack
spec:
  containers:
  - image: wordpress:latest
    name: wordpress
    volumeMounts:
      - mountPath: /var/www/html
        name: wp-stack
        subPath: html
  - image: mysql:latest
    name: db
    volumeMounts:
      - mountPath: /var/lib/mysql
        name: wp-stack
        subPath: mysql
  volumes:
  - name: wp-stack
    emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-app-svc
spec:
  type: NodePort
  selector:
    app: wordpress-stack
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80 
    nodePort: 30080

---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "wordpress.localhost"
    http:
     paths:
     - pathType: Prefix 
       path: /
       backend:
         service:
           name: wordpress-app-svc
           port:
             number: 8080
